# python_web_ex_3

./: pyproject.toml
ex_3/: HomeworkHandler.py  helper.py  main.py
ex_3/part_1/: main.py
ex_3/part_2/: main.py
